syntax = "proto3";

package rivet.backend.user.update;

import "proto/common.proto";
import "proto/backend/user.proto";

message Update {
	reserved 3;

	oneof kind {
		UserUpdate update = 1;
		PresenceUpdate presence_update = 2;
		FollowCreate follow_create = 4;
		FollowDelete follow_delete = 5;
	}
}

message UserUpdate {
	reserved 1;
}

message PresenceUpdate {
	reserved 1;
	
	oneof kind {
		backend.user.Status status = 2;
		backend.user.Presence.GameActivity game_activity = 3;
	}
}

message FollowCreate {
	rivet.common.Uuid follower_user_id = 1;
}

message FollowDelete {
	rivet.common.Uuid follower_user_id = 1;
}
